--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: about.html
     - text: "Plotly"
       href: plotly.html
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<helen.z@columbia.edu>
     - icon: fa-file fa-lg
